# Freelance

ble_ear/test/c++/custom_models/grok_local/: CMakeLists.txt  combined_wav_gk.cpp  convert_command.txt  convert_groktorknn.py  convert_smaller_grok.py  cr.py  infer.cpp  infer_models.py  labels.txt  labels_pytorch.txt  multi_infer.cpp  preprocess_for_quant.py  single_wav_CMakeLists.txt  validate_chunk.cpp  voice_comd.py  voice_command.cpp
ble_ear/test/c++/custom_models/grok_test/: CMakeLists.txt  combined_gk.cpp  main.cpp
ble_ear/test/c++/custom_models/grok_test/conversion/: infer_models.py  spectrogram_quant_list.txt
ble_ear/test/c++/custom_models/grok_test/models/: labels.txt
ble_ear/test/c++/custom_models/test_korean_large/: CMakeLists.txt  infer_test.py  main.cpp
ble_ear/test/c++/custom_models/test_korean_large/models/: label_mappings.json
ble_ear/test/c++/custom_models/test_korean_small/: CMakeLists.txt  audio_quant_npy_list.txt  convert_safetensors_to_bin.py  download_model.py  export_classifier_rknn.py  folder_inference.cpp  generate_text_filename.py  infer_small.py  inference.cpp  inference_org.cpp  main.cpp  preprocess_audio_for_quant.py  voice_command_small.cpp
ble_ear/test/c++/custom_models/test_korean_small/models/: k3_150epoch.onnx  korean_command_classifier0715.onnx
ble_ear/test/c++/portaud/tt/: CMakeLists.txt  main.cpp
ble_ear/test/c++/portaud/tt/port_rknn/: CMakeLists.txt
ble_ear/test/c++/stream/local/: CMakeLists.txt  vosk_recognizer.cpp  vosk_recognizer_ble.cpp  vosk_recognizer_pa.cpp
cifar10/: cifar-10_work.ipynb  (+1 more)
da_app/test/fm_plus_ob/c++/: CMakeLists.txt
da_app/test/fm_plus_ob/c++/log/: latest_list
da_app/test/fm_plus_ob/c++/src/: BlinkDetector.cpp  BlinkDetector.hpp  CMakeLists.txt  FaceDetection.cpp  FaceLandmark.cpp  FaceLandmark.hpp  HeadPoseTracker.cpp  HeadPoseTracker.hpp  IrisLandmark.cpp  IrisLandmark.hpp  KSSCalculator.cpp  KSSCalculator.hpp  YawnDetector.cpp  YawnDetector.hpp  inference.cpp  inference.h  main.cpp
da_app/test/rknn/RetinaFace/cpp/: CMakeLists.txt  faced_box_priors.h  faced_facel.cc  faced_facel.h  main.cc  retinaface.h
da_app/test/rknn/RetinaFace/cpp/rknpu1/: retinaface.cc
da_app/test/rknn/RetinaFace/cpp/rknpu2/: retinaface.cc
da_app/test/rknn/RetinaFace_org_custom/cpp/: CMakeLists.txt  face_analyzer.cc  face_analyzer.h  main.cc
da_app/test/rknn/RetinaFace_org_custom/cpp/rknpu1/: retinaface.cc
da_app/test/rknn/dms_rknn/cpp/: CMakeLists.txt  main.cc
da_app/test/rknn/dms_rknn/cpp/behavior_analysis/: KSSCalculator.cpp  KSSCalculator.hpp  YawnDetector.hpp
da_app/test/rknn/dms_rknn/cpp/face_analyzer/: face_analyzer.h
da_app/test/rknn/dms_rknn/cpp/yolo_detector/: postprocess.cc  postprocess.h  yolo11.h
da_app/test/rknn/dms_rknn_gst/cpp/: CMakeLists.txt  main.cc  main_no_box_landmakrs.cc  main_no_box_landmakrs_stylecode.cc  main_resize_window_640.cc  main_with_all.cc
da_app/test/rknn/dms_rknn_gst/cpp/behavior_analysis/: BlinkDetector.cpp  BlinkDetector.hpp  HeadPoseTracker.cpp  HeadPoseTracker.hpp  KSSCalculator.cpp  KSSCalculator.hpp  YawnDetector.cpp  YawnDetector.hpp
da_app/test/rknn/dms_rknn_gst/cpp/face_analyzer/: face_analyzer.cc  face_analyzer.h
da_app/test/rknn/dms_rknn_gst/cpp/yolo_detector/: postprocess.cc  postprocess.h  yolo11.h
da_app/test/rknn/od/yolo11/cpp/: CMakeLists.txt  main.cc  postprocess.cc  postprocess.h  read_file.py  yolo11.h
hailo_pd/inference/c++/speech_recognition/: CMakeLists.txt
hailo_pd/inference/c++/speech_recognition/cmake/: FindFFTW3.cmake
hailo_pd/inference/c++/speech_recognition/models/: labels.txt
hailo_pd/inference/c++/speech_recognition/setup_env/: config.yaml
hailo_pd/person_detection/ak_double_camera_crop/tracking_lib/: CMakeLists.txt
hailo_pd/person_detection/detection_eigen/: CMakeLists.txt
hailo_pd/person_detection/detection_eigen/object_detection/: object_detection.cpp
hailo_pd/person_detection/detection_eigen/object_detection/utils/: utils.cpp
hailo_pd/person_detection/detection_eigen/tracking_lib/: CMakeLists.txt
hailo_pd/person_detection/lapjv_detection/tracking_lib/: CMakeLists.txt
hailo_pd/person_detection/lapjv_detection_motion_compension/: CMakeLists.txt
hailo_pd/person_detection/lapjv_detection_motion_compension/object_detection/: object_detection.cpp
hailo_pd/person_detection/lapjv_detection_motion_compension/object_detection/utils/: utils.cpp  utils.hpp
hailo_pd/person_detection/lapjv_detection_motion_compension/tracking_lib/include/ByteTrack/: STrack.h
hailo_pd/person_detection/lapjv_detection_motion_compension/tracking_lib/src/: STrack.cpp
hailo_pd/person_detection/rk3588/ak_double_camera_crop/: CMakeLists.txt  boresight_matrix.xml
hailo_pd/person_detection/rk3588/ak_double_camera_crop/object_detection/: config.hpp  global_stabilizer.cpp  tracking_pipeline.cpp
hailo_pd/person_detection/rk3588/ak_double_camera_crop/object_detection/utils/: utils.cpp  utils.hpp
hailo_pd/person_detection/rk3588/ak_double_camera_crop/tracking_lib/src/: BYTETracker.cpp
hailo_pd/person_detection/rk3588/ak_new_fusion/: CMakeLists.txt
hailo_pd/person_detection/rk3588/ak_new_fusion/calibration/: rig_meta.json
hailo_pd/person_detection/rk3588/ak_new_fusion/object_detection/: config.hpp  global_stabilizer.hpp  tracking_pipeline.cpp  tracking_pipeline.hpp
hailo_pd/person_detection/rk3588/ak_new_fusion/object_detection/utils/: calib_data_io.cpp  calib_data_io.hpp  calibration.hpp  lut.cpp  lut.hpp  utils.cpp  utils.hpp
hailo_pd/person_detection/rk3588/ak_new_fusion/tracking_lib/: CMakeLists.txt
hailo_pd/person_detection/rk3588/fusion/fusion_test2/: CMakeLists.txt
hailo_pd/person_detection/rk3588/fusion/fusion_test2/object_detection/: config.hpp  tracking_pipeline.cpp  tracking_pipeline.hpp
hailo_pd/person_detection/rk3588/ljv_mc_ak_ptz_modular_y5s_crop/: CMakeLists.txt
hailo_pd/person_detection/rk3588/ljv_mc_ak_ptz_modular_y5s_crop/object_detection/: config.hpp  main.cpp  tracking_pipeline.cpp  tracking_pipeline.hpp
hailo_pd/person_detection/rk3588/ljv_mc_ak_ptz_modular_y5s_crop/tracking_lib/: CMakeLists.txt
(+1256 files in other folders)
